--- a/odoo17.conf
+++ b/odoo17.conf
@@ -1,7 +1,7 @@
 [options]
-
 xmlrpc_port = 8069
 db_port = 5432
 addons_path = ~/repo/odoo17/enterprise17,~/repo/odoo17/odoo17/addons,~/repo/odoo17/odoo17, ~/production
-admin_passwd =admin
-mode=dev
+admin_passwd = $pbkdf2-sha512$600000$j5FyTknJ2VvLuZfSWosR4g$faMm3bTy7sUQfSiBK2hGbOS1rg6hfeK75EUV3fwPuv1Y8oivFd0V./V4Awtnda8/IfGjNcL1npif8LlXXY0q2w
+mode = dev
+
